--- a/app/index.css
+++ b/app/index.css
@@ -1,60 +1,3 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  display: grid;
-  margin: 0;
-  height: 100vh;
-  grid-template: auto 1fr auto / 200px 1fr
-}
-
-header {
-  background: wheat;
-  padding: 0 2rem;
-  grid-column: 1 / 4;
-  border-bottom: 2px solid gray;
-}
-
-.left-sidebar {
-  grid-column: 1 / 2;
-  border-right: 2px solid gray;
-  padding: 1rem;
-  min-width: 0;
-}
-
-.left-sidebar * {
-  overflow-x: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-.left-sidebar ul {
-  padding-left: initial;
-  list-style-position: inside;
-}
-
-main {
-  grid-column: 2 / 3;
-  padding: 1em;
-  overflow-y: scroll;
-}
-
-dt {
-  font-weight: bold;
-  color: gray;
-}
-
-dd {
-  font-style: italic;
-}
-
-hr {
-  width: 80%;
-  color: lightgray;
-}
-
-footer {
-  background: wheat;
-  padding: 0 2rem;
-  text-align: center;
-  grid-column: 1 / 4;
-  border-top: 2px solid gray;
-}
+@import 'styles/layout';
+@import 'styles/sidebar';
+@import 'styles/main';
