--- a/app/styles/layout.css
+++ b/app/styles/layout.css
@@ -1,6 +1,6 @@
 body {
   display: grid;
-  grid-template: auto 1fr auto / 200px 1fr;
+  grid-template: auto 1fr auto / 250px 1fr;
   height: 100vh;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -16,6 +16,7 @@ header {
 .sidebar {
   grid-column: 1 / 2;
   padding: 1rem;
+  overflow-y: scroll;
   border-right: 2px solid gray;
 }
 
