--- a/app/styles/sidebar.css
+++ b/app/styles/sidebar.css
@@ -4,7 +4,13 @@
   text-overflow: ellipsis;
 }
 
+.sidebar h3 {
+  margin-bottom: 5px;
+}
+
 .sidebar ul {
+  margin-top: 0;
   padding-left: initial;
   list-style-position: inside;
+  font-size: .9em;
 }
